# unikode

./: Cargo.toml  README.md  unikode.conf
src/: config.rs  constants.rs  editor.rs  implementations.rs  main.rs  modeline.rs  tools.rs  ui.rs
src/editor/: buffer.rs  cell.rs  scroll.rs
src/implementations/: options.rs  ordfloat.rs  rectedges.rs
src/tools/: arrowtool.rs  boxtool.rs  erasetool.rs  lines.rs  linetool.rs  movetool.rs  selecttool.rs  texttool.rs  tool.rs
src/tools/lines/: arrowtool.rs  boxtool.rs  linetool.rs
src/utils/: box_join.rs  mod.rs  ordfloat.rs  rectedges.rs
