[package]
name = "unikode"
description = "TUI based Unicode diagram editor."
version = "0.1.0"
edition = "2021"
authors = ["stevenp2 <s.phung808@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stevenp2/unikode"
repository = "https://github.com/stevenp2/unikode.git"

[dependencies]
clipboard = "0.5.0"
crossterm = "0.28.1"
cursive = "0.21.1"
lazy_static = "1.5.0"
line_drawing = "1.0.0"
log = "0.4.22"
num-traits = "0.2.19"
parking_lot = "0.12.3"
pathfinding = "4.11.0"
structopt = "0.3.26"

